--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <nav class="bg-[#F9F7F3] flex justify-around items-center pt-6 pb-16">
             <div>
-                <button class="btn-primary px-8 py-4 rounded-lg text-[#111111] text-xl font-semibold">Blog</button>
+                <button id="blog-button" class="btn-primary px-8 py-4 rounded-lg text-[#111111] text-xl font-semibold">Blog</button>
             </div>
 
             <div class="flex items-center space-x-3">
